# CLAUDE-CODE-CONNECT

./: .env.example  .gitignore  README.md  bot_daemon.py  check_outbox.py  check_qq.py  hook_startup.py  hook_stop.py  pyproject.toml  read_msgs.py  reply_qq.py  requirements.txt  reset_outbox.py  run.py  start_qq.bat  watch_qq.py
.claude/: mcp.json
.claude-plugin/: plugin.json
.claude/commands/: qq.md
data/: msg10.txt  msg11.txt  msg12.txt  msg13.txt  msg20.txt  msg8.txt  msg9.txt  msg_output.txt
logs/: latest
qq_bridge/: __init__.py  __main__.py  ai_client.py  app.py  channel.py  config.py  fast_hook.py  hook.py  qq_bot.py  server.py  storage.py  text.py
scripts/: install-claude-autostart.ps1
